initial migration and ef setting

--- a/ToDoListWebMVC/appsettings.json
+++ b/ToDoListWebMVC/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "ToDoListWebMVCContext": "server=localhost;password=12341234;username=postgres;database=todolistwebmvcdb"
   }
 }
